# Rust_triple_task_system

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x
src/: main.rs
