[package]
authors = ["Viktor Fällman <vikfll-0@student.ltu.se>"]
name = "app"
version = "0.1.0"

[dependencies]
cortex-m-rtfm = "0.2.1"
cortex-m = "0.3.1"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[profile.release]
debug = true
lto = true

[dependencies.stm32f40x]
features = ["rt"] # see comment above
git = "https://gitlab.henriktjader.com/pln/STM32F40x"